<resources>
    <string name="app_name">RaceYourTrack</string>

    <!-- Free Ride -->
    <string name="free_ride">Free Ride</string>
    <!-- - - - - - -->

    <!-- Bluetooth -->
    <string name="connect_bluetooth">Connect Bluetooth</string>
    <string name="disconnect_bluetooth">Disconnect Bluetooth</string>
    <string name="bluetooth_progress_dialog_title">Connecting to your car</string>
    <string name="looking_for_in_paired_devices">Looking for your car in paired devices list</string>
    <string name="founded_in_paired_devices">Your car is paired to your device</string>
    <string name="rc_car_not_paired">It seems that the car isn\'t synchronized with your device</string>
    <string name="impossible_discovering">It\'s not possible to search for your car</string>
    <string name="discovery_started">Looking for your car</string>
    <string name="car_discovered">Your car has been discovered</string>
    <string name="discovery_finished">Finishing looking for your car</string>
    <string name="trying_to_connect">Trying to establish a connection with your car</string>
    <string name="connected_to_your_car">Connection established</string>
    <string name="lost_bluetooth_connection">It seems you have lost the Bluetooth\'s communication</string>
    <!-- - - - - - -->

    <!-- Garage -->
    <string name="garage">Garage</string>

    <string name="cars">Cars</string>

    <string name="settings">Settings</string>
    <string name="settings_saved">Settings saved.</string>

    <string name="sound">Sound:</string>
    <string name="enable_sound">Enable sound:</string>

    <string name="driving_mode">Driving mode:</string>
    <string name="custom">Custom</string>
    <string name="beginner">Beginner</string>
    <string name="realistic">Realistic</string>
    <string name="race_driver">Race driver</string>

    <string name="steering_wheel_title">Steering Wheel:</string>
    <string name="steering_wheel">Steering wheel</string>
    <string name="arrows">Arrows</string>

    <string name="transmission">Transmission:</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>

    <string name="pedals">Pedals:</string>
    <string name="both">Throttle and Brake</string>
    <string name="advanced_throttle">Advanced throttle</string>
    <!-- - - - - - -->

    <!-- Play -->
    <string name="play">Play</string>

    <string name="circuits">Circuits</string>
    <string name="tracks">Tracks</string>
    <string name="secrets">Secrets</string>
    <string name="number_of_laps">Laps: %1$d</string>

    <string name="show_full_raceway">Show raceway</string>

    <string name="accept">Accept</string>
    <!-- - - - - - -->

    <!-- Errors -->
    <string name="code">Code</string>
    <string name="src_error">"Oops! Something isn't work properly"</string>
    <!-- - - - - - -->

    <string name="unknown">Unknown</string>
    <string name="h_shift">H Shift</string>
    <string name="sequential_shift">Sequential Shift</string>
</resources>
