<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.widget.Button
            android:id="@+id/btn_circuits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/play_background_style_buttons"
            android:text="@string/circuits"/>

        <android.widget.Button
            android:id="@+id/btn_tracks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/play_background_style_buttons"
            android:text="@string/tracks"/>

        <android.widget.Button
            android:id="@+id/btn_specials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/play_background_style_buttons"
            android:text="@string/secrets"/>

    </LinearLayout>

    <!-- Dynamic Fragments Container -->
    <FrameLayout
        android:id="@+id/play_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>