<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Sound Settings -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10px">

    </LinearLayout>

    <!-- Control Settings -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/normal_spacing"
        android:background="@drawable/exterior_container">

        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:text="@string/controls"/>-->

        <!-- TODO: Insert Line -->

        <!-- Driving Mode Spinner -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="15px"
            android:layout_marginVertical="10px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="textStart"
                android:textSize="@dimen/h1_character_size"
                android:textColor="@color/light_font_color"
                android:text="@string/driving_mode"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_driving_mode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:popupBackground="@drawable/interior_container"/>

        </LinearLayout>

        <!-- Driving Mode Specifications -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px">

            <!-- Steering Wheel -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/small_padding"
                android:background="@drawable/intermediate_container">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/h2_character_size"
                    android:textColor="@color/light_font_color"
                    android:text="@string/steering_wheel_title"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_steering_wheel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown"
                    android:popupBackground="@drawable/interior_container"/>

            </LinearLayout>

            <!-- Transmission -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="@dimen/normal_spacing"
                android:padding="@dimen/small_padding"
                android:background="@drawable/intermediate_container">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/h2_character_size"
                    android:textColor="@color/light_font_color"
                    android:text="@string/transmission"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_transmission"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:popupBackground="@drawable/interior_container"/>

            </LinearLayout>

            <!-- Pedals -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/normal_spacing"
                android:padding="@dimen/small_padding"
                android:background="@drawable/intermediate_container">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/h2_character_size"
                    android:textColor="@color/light_font_color"
                    android:text="@string/pedals"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_pedals"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:popupBackground="@drawable/interior_container"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>